Implement dynamic menu (WIP)

--- a/index.html
+++ b/index.html
@@ -103,89 +103,20 @@
               <li class="nav-item">
                 <a class="nav-link p-3" data-toggle="list" href="#bbq" role="tab">BBQ</a>
               </li>
+			  <li class="nav-item">
+                <a class="nav-link p-3" data-toggle="list" href="#beverages" role="tab">Beverages</a>
+              </li>
             </ul>
             <!-- Tab panes -->
             <div class="tab-content">
               <div class="tab-pane fade show active" id="breakfast" role="tabpanel">
                 <div class="row">
                   <div class="col-md">
-                    <ul class="list-unstyled pb_food-menu">
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Omelet</h3>
-                            <p class="mb-0">with bacon and erics toast</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>13.95</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fried Calamari</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>15.50</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Sausage and Pepper</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>17.35</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Potato and Egg</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>11.50</span></div>
-                        </div>
-                      </li>
+                    <ul class="list-unstyled pb_food-menu" id="breakfastColumn1">
                     </ul>
                   </div>
                   <div class="col-md">
-                    <ul class="list-unstyled pb_food-menu">
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Eggplant Parmiagana</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>20.75</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fried Calamari</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>18.00</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Sausage and Pepper</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>10.25</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Potato and Egg</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>21.95</span></div>
-                        </div>
-                      </li>
+                    <ul class="list-unstyled pb_food-menu" id="breakfastColumn2">
                     </ul>
                   </div>
                 </div>
@@ -193,83 +124,11 @@
               <div class="tab-pane fade" id="lunch" role="tabpanel">
                 <div class="row">
                   <div class="col-md">
-                    <ul class="list-unstyled pb_food-menu">
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Burger</h3>
-                            <p class="mb-0">with fries</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>10.95</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fresh Juices</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>12.50</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Coffee/Tea</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>5.35</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Unsweetened Tea</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>12.50</span></div>
-                        </div>
-                      </li>
+                    <ul class="list-unstyled pb_food-menu" id="lunchColumn1">
                     </ul>
                   </div>
                   <div class="col-md">
-                    <ul class="list-unstyled pb_food-menu">
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fountain Soda</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>10.95</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Fresh Juices</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>12.50</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Coffee/Tea</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>5.35</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Unsweetened Tea</h3>
-                            <p class="mb-0">Far far away, behind the word mountains..</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>12.50</span></div>
-                        </div>
-                      </li>
+                    <ul class="list-unstyled pb_food-menu" id="lunchColumn2">
                     </ul>
                   </div>
                 </div>
@@ -277,83 +136,23 @@
               <div class="tab-pane fade" id="bbq" role="tabpanel">
                 <div class="row">
                   <div class="col-md">
-                    <ul class="list-unstyled pb_food-menu">
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Pulled Pork</h3>
-                            <p class="mb-0">with bbq sauce</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>13.95</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Garden Salad</h3>
-                            <p class="mb-0">Mixed greens, tomato, cucumber &amp; black olives</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>15.50</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Baby Greens</h3>
-                            <p class="mb-0">Mixed greens, fresh mozzarella, tomato &ampl toasted peppers</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>17.35</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Cold Antipasto</h3>
-                            <p class="mb-0">Romaine lettuce, croutons, and grated cheese</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>11.50</span></div>
-                        </div>
-                      </li>
+                    <ul class="list-unstyled pb_food-menu" id="bbqColumn1">
                     </ul>
                   </div>
                   <div class="col-md">
-                    <ul class="list-unstyled pb_food-menu">
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Caesars Salad</h3>
-                            <p class="mb-0">Romaine lettuce, croutons, and grated cheese</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>22.95</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Garden Salad</h3>
-                            <p class="mb-0">Mixed greens, tomato, cucumber &amp; black olives</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>11.50</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Baby Greens</h3>
-                            <p class="mb-0">Mixed greens, fresh mozzarella, tomato &ampl toasted peppers</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>14.35</span></div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="row">
-                          <div class="col-lg-10">
-                            <h3 class="pb_font-18 font-weight-bold">Cold Antipasto</h3>
-                            <p class="mb-0">Romaine lettuce, croutons, and grated cheese</p>
-                          </div>
-                          <div class="col-lg-2"><span class="price"><sup>$</sup>15.50</span></div>
-                        </div>
-                      </li>
+                    <ul class="list-unstyled pb_food-menu" id="bbqColumn2">
+                    </ul>
+                  </div>
+                </div>
+              </div>
+			  <div class="tab-pane fade" id="beverages" role="tabpanel">
+                <div class="row">
+                  <div class="col-md">
+                    <ul class="list-unstyled pb_food-menu" id="beveragesColumn1">
+                    </ul>
+                  </div>
+                  <div class="col-md">
+                    <ul class="list-unstyled pb_food-menu" id="beveragesColumn2">
                     </ul>
                   </div>
                 </div>
@@ -636,6 +435,7 @@
     <script src="assets/js/magnific-popup-options.js"></script>
     <script src="assets/js/google-map.js"></script>
     <script src="assets/js/main.js"></script>
+	<script src="menu/js/menuPopulator.js"></script>
     <script async src="https://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=801&amp;locationId=386572&amp;lang=en_US&amp;lang=en_US&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
   </body>
 </html>
