--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     </section>
     <!-- END section -->
     <section class="pb_section pt-0 pb-0" id="section-contact">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="pb_half py-5 col-sm">
                     <div class="row justify-content-center mb-5">
