Remove unneeded sections, and update description

--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
                 <div class="col-md-9  order-md-1">
                     <h2 class="heading mb-3">Johnny&#039;s Victory Diner</h2>
                     <div class="sub-heading">
-                        <p class="mb-5">*insert text explaining the restaurant here*</p>
+                        <p class="mb-5"><h2>Our little slice of heaven</h2>
+
+Welcome to Johnny’s! Our little diner has been in the same location since the 30’s … We take great pride in making sure your breakfast, lunch or dinner is served fresh, hot, and with all the love and care your momma used to make it with. Our food is scratch-made, homemade, and housemade every day - fresh, never frozen. Our head cook has been with us for 18 years, making fresh soups and meals she learned from her mother years ago.
+
+From Memorial Day to Labor Day, we serve real southern BBQ on Friday nights until 8 pm. Our Pitmaster learned from the great Myron Mixon (look him up, he’s pretty famous!) and will prepare everything from baby back ribs to 12-hour brisket, pulled pork to smoked chicken wings - all flavored with the sweet taste of apple and oak wood, low ‘n slow like it should be. We have all your favorite southern sides too – cornbread, pit beans, mac ‘n cheese, and cole slaw.
+
+ 
+
+Come on in, get to know our friendly staff and become part of the family.</p>
                     </div>
                     <p><a href="#section-menu" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">View our menu</a></p>
                 </div>
@@ -160,17 +168,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- END section -->
-    <section class="pb_md_py_cover text-center cover-bg-black cover-bg-opacity-4" style="background-image: url(assets/images/restaurant/1900x1200/img_1.jpg)" id="section-home">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-md-9  order-md-1">
-                    <h2 class="heading mb-3">Delicious &amp; Nutritious</h2>
-                    <p class="sub-heading">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                 </div>
             </div>
         </div>
@@ -286,17 +283,6 @@
                             <p class="subheading">@james</p>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- END section -->
-    <section class="pb_md_py_cover text-center cover-bg-black cover-bg-opacity-4" style="background-image: url(assets/images/restaurant/1900x1200/img_1.jpg)" id="section-home">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-md-9  order-md-1">
-                    <h2 class="heading mb-3">Good Food, Good Taste</h2>
-                    <p class="sub-heading">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                 </div>
             </div>
         </div>
