--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
          <div class="container">
             <div class="row justify-content-center mb-5">
                <div class="col-md-10 text-center">
-                  <h2 class="mb-4 text-uppercase pb_letter-spacing-2">What People Says...</h2>
+                  <h2 class="mb-4 text-uppercase pb_letter-spacing-2">What People Say...</h2>
                </div>
             </div>
             <div class="row">
@@ -291,7 +291,7 @@
          <div class="container">
             <div class="row justify-content-center mb-5">
                <div class="col-md-10 text-center">
-                  <h2 class="mb-4 text-uppercase pb_letter-spacing-2">Events</h2>
+                  <h2 class="mb-4 text-uppercase pb_letter-spacing-2">Catering</h2>
                </div>
             </div>
             <div class="row">
