Fix the font size

--- a/index.html
+++ b/index.html
@@ -55,14 +55,16 @@
                   <div class="sub-heading">
                      <p class="mb-5">
                      <h3>Our little slice of heaven</h3>
-                     Welcome to Johnny’s! Our little diner has been in the same location since the 30’s … We take great pride in making sure your breakfast, lunch or dinner is served fresh, hot, and with all the love and care your momma used to make it with. Our food is scratch-made, homemade, and housemade every day - fresh, never frozen. Our head cook has been with us for 18 years, making fresh soups and meals she learned from her mother years ago.
-                     From Memorial Day to Labor Day, we serve real southern BBQ on Friday nights until 8 pm. Our Pitmaster learned from the great Myron Mixon (look him up, he’s pretty famous!) and will prepare everything from baby back ribs to 12-hour brisket, pulled pork to smoked chicken wings - all flavored with the sweet taste of apple and oak wood, low ‘n slow like it should be. We have all your favorite southern sides too – cornbread, pit beans, mac ‘n cheese, and cole slaw.
-                     Come on in, get to know our friendly staff and become part of the family.
-                     <br />
+                     <p class="description">Welcome to Johnny’s! Our little diner has been in the same location since the 30’s … We take great pride in making sure your breakfast, lunch or dinner is served fresh, hot, and with all the love and care your momma used to make it with. Our food is scratch-made, homemade, and housemade every day - fresh, never frozen. Our head cook has been with us for 18 years, making fresh soups and meals she learned from her mother years ago.
+                        From Memorial Day to Labor Day, we serve real southern BBQ on Friday nights until 8 pm. Our Pitmaster learned from the great Myron Mixon (look him up, he’s pretty famous!) and will prepare everything from baby back ribs to 12-hour brisket, pulled pork to smoked chicken wings - all flavored with the sweet taste of apple and oak wood, low ‘n slow like it should be. We have all your favorite southern sides too – cornbread, pit beans, mac ‘n cheese, and cole slaw.
+                        Come on in, get to know our friendly staff and become part of the family.
+                     </p>
                      <br />
                      <h3>Contact Us</h3>
+                     <p class="description">
                      <p>Email: <a href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
                      <p>Phone: (401)-765-2661</p>
+                     </p>
                      </p>
                   </div>
                   <p><a href="#section-menu" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">View our menu</a></p>
