Update menu to include cattering

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                      </a>
                   </li>
                   <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-gallery">Gallery</a></li>
-                  <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-events">Events</a></li>
+                  <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-catering">Catering</a></li>
                   <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-contact">Contact</a></li>
                </ul>
             </div>
@@ -290,7 +290,7 @@
          </div>
       </section>
       <!-- END section -->
-      <section class="pb_section bg-light" id="section-events">
+      <section class="pb_section bg-light" id="section-catering">
          <div class="container">
             <div class="row justify-content-center mb-5">
                <div class="col-md-10 text-center">
