--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="pb_cover_v1 cover-bg-black cover-bg-opacity-4 text-center" style="background-image: url(assets/images/restaurant/1900x1200/img_1.jpg)" id="section-home">
          <div class="container">
             <div class="row align-items-center justify-content-center">
-               <div class="col-md-9  order-md-1">
+               <div class="col-md-9 order-md-1 top-header">
                   <h2 class="heading mb-3">Johnny&#039;s Victory Diner</h2>
                   <div class="sub-heading">
                      <p class="mb-5">
