add first gallery pic and edit pic names

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                <div class="col-lg-8 mb-5">
                   <div class="row">
                      <div class="col">
-                        <p><img src="assets/images/restaurant/800x975/img_1.jpg" alt="Instant Image" class="img-fluid"></p>
+                        <p><img src="assets/images/restaurant/800x975/img_1.jpeg" alt="Instant Image" class="img-fluid"></p>
                      </div>
                      <div class="col">
-                        <p><img src="assets/images/restaurant/800x975/img_2.jpg" alt="Instant Image" class="img-fluid"></p>
+                        <p><img src="assets/images/restaurant/800x975/img_2.jpeg" alt="Instant Image" class="img-fluid"></p>
                      </div>
                   </div>
                </div>
@@ -195,7 +195,7 @@
                   <div class="card-columns">
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/img_1.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/img_1.jpg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/img_1.jpeg" alt="Benny and the jets">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
