Add pics for gallery

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                   </div>
                </div>
                <div class="col-lg-4 pl-lg-5 pl-lg-0">
-                  <h2 class="mb-4 text-uppercase pb_letter-spacing-2">The Restaurant</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                  <h2 class="mb-4 text-uppercase pb_letter-spacing-2">The Diner</h2>
+                  <p>Located in scenic Burrillville RI, easily accessible from Route 295 or Route 146, you’ll find our home away from home. We’re open every day at 5 am, so stop in for a coffee and a hearty breakfast or lunch.</p>
+                  <p>We promise you’ll leave with a full belly, some new friends, and a new favorite diner …</p>
                   <p><a href="#section-menu" class="smoothscroll text-danger text-uppercase">See our menu <i class="ion-arrow-down-c"></i></a></p>
                </div>
             </div>
@@ -194,56 +194,56 @@
                <div class="col">
                   <div class="card-columns">
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/800x975/img_1.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/img_1.jpeg" alt="Benny and the jets">
+                        <a href="assets/images/restaurant/800x975/gallery/topRowLeft.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/topRowLeft.jpeg" alt="Benny and the jets">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/800x975/img_1.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/img_1.jpg" alt="Image caption here">
+                        <a href="assets/images/restaurant/800x975/gallery/topRowMid.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/topRowMid.jpeg" alt="Image caption here">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/1900x1200/img_1.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Image caption here">
+                        <a href="assets/images/restaurant/800x975/gallery/topRowRight.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/topRowRight.jpeg" alt="Image caption here">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/800x975/img_2.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/img_2.jpg" alt="Image caption here">
+                        <a href="assets/images/restaurant/800x975/gallery/midRowLeft.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowLeft.jpeg" alt="Image caption here">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/1900x1200/img_1.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Image caption here">
+                        <a href="assets/images/restaurant/800x975/gallery/midRowMid.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowMid.jpeg" alt="Image caption here">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/800x975/img_1.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/img_1.jpg" alt="Image caption here">
+                        <a href="assets/images/restaurant/800x975/gallery/midRowRight.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowRight.jpeg" alt="Image caption here">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/800x975/img_1.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/img_1.jpg" alt="Image caption here">
+                        <a href="assets/images/restaurant/800x975/gallery/bottomRowLeft.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowLeft.jpeg" alt="Image caption here">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/800x975/img_2.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/img_2.jpg" alt="Image caption here">
+                        <a href="assets/images/restaurant/800x975/gallery/bottomRowMid.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowMid.jpeg" alt="Image caption here">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
-                        <a href="assets/images/restaurant/1900x1200/img_1.jpg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/1900x1200/img_1.jpg" alt="Image caption here">
+                        <a href="assets/images/restaurant/800x975/gallery/bottomRowRight.jpeg" class="pb_hover-zoom image-popup">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowRight.jpeg" alt="Image caption here">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
