--- a/index.html
+++ b/index.html
@@ -201,49 +201,49 @@
                      </div>
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/gallery/topRowMid.jpeg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/topRowMid.jpeg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/topRowMid.jpeg" alt="Pulled Pork">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/gallery/topRowRight.jpeg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/topRowRight.jpeg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/topRowRight.jpeg" alt="Wings">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/gallery/midRowLeft.jpeg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowLeft.jpeg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowLeft.jpeg" alt="Steak and eggs">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/gallery/midRowMid.jpeg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowMid.jpeg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowMid.jpeg" alt="Johnny and Rhonda">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/gallery/midRowRight.jpeg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowRight.jpeg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/midRowRight.jpeg" alt="Burger with fries">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/gallery/bottomRowLeft.jpeg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowLeft.jpeg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowLeft.jpeg" alt="Cornbread">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/gallery/bottomRowMid.jpeg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowMid.jpeg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowMid.jpeg" alt="Brisket">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
                      <div class="card border-0 mb-4">
                         <a href="assets/images/restaurant/800x975/gallery/bottomRowRight.jpeg" class="pb_hover-zoom image-popup">
-                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowRight.jpeg" alt="Image caption here">
+                        <img class="img-fluid" src="assets/images/restaurant/800x975/gallery/bottomRowRight.jpeg" alt="Fish and chips">
                         <i class="ion-ios-search-strong icon"></i>
                         </a>
                      </div>
