--- a/index.html
+++ b/index.html
@@ -265,10 +265,8 @@
                   <div class="media d-block text-center testimonial_v1 pb_quote_v1">
                      <div class="media-body">
                         <div class="quote pb_text-black">&ldquo;</div>
-                        <blockquote class="mb-5 pb_font-20">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</blockquote>
-                        <img class="d-flex text-center mx-auto mb-3 rounded-circle" src="assets/images/persons/person_1.jpg" alt="Generic placeholder image">
-                        <h3 class="heading">Garry Alexander</h3>
-                        <p class="subheading">@garry</p>
+                        <blockquote class="mb-5 pb_font-20">I picked my granddaughter up nearby and we needed breakfast. I figured the place would be decent because the parking lot was full. We found a table and enjoyed the ambiance while waiting to get service. The staff was very friendly. Our food was excellent, as well. Nice local place.</blockquote>
+                        <h3 class="heading">Bohica12 - TripAdvisor</h3>
                      </div>
                   </div>
                </div>
@@ -276,10 +274,8 @@
                   <div class="media d-block text-center testimonial_v1 pb_quote_v1">
                      <div class="media-body">
                         <div class="quote pb_text-black">&ldquo;</div>
-                        <blockquote class="mb-5 pb_font-20">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</blockquote>
-                        <img class="d-flex text-center mx-auto mb-3 rounded-circle" src="assets/images/persons/person_5.jpg" alt="Generic placeholder image">
-                        <h3 class="heading">Deborah Smith</h3>
-                        <p class="subheading">@deborah</p>
+                        <blockquote class="mb-5 pb_font-20">Been there twice now and both times the service was prompt and friendly, coffee good, food yummy and filling; portions generous and nice “specials” ... can’t wait to try the BBQ! This cute little diner delivers exactly what one would expect!</blockquote>
+                        <h3 class="heading">Robin Marnoch Mcdonald - Facebook</h3>
                      </div>
                   </div>
                </div>
@@ -287,10 +283,8 @@
                   <div class="media d-block text-center testimonial_v1 pb_quote_v1">
                      <div class="media-body">
                         <div class="quote pb_text-black">&ldquo;</div>
-                        <blockquote class="mb-5 pb_font-20">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</blockquote>
-                        <img class="d-flex text-center mx-auto mb-3 rounded-circle" src="assets/images/persons/person_2.jpg" alt="Generic placeholder image">
-                        <h3 class="heading">James Robertson</h3>
-                        <p class="subheading">@james</p>
+                        <blockquote class="mb-5 pb_font-20">Cute little neighborhood diner. Nicely decorated with a hometown feel. Friendly service with typical diner food. We went for lunch, but unfortunately they do not serve lunch on Sundays so only breakfast items were available. Our waitress suggested the breakfast burger, which was very good, and was served with home fries. Looking forward to going back for lunch, or to try the BBQ on Saturday nights during the warmer weather.</blockquote>
+                        <h3 class="heading">Heidi B. - Yelp</h3>
                      </div>
                   </div>
                </div>
@@ -302,7 +296,7 @@
          <div class="container">
             <div class="row justify-content-center mb-5">
                <div class="col-md-10 text-center">
-                  <h2 class="mb-4 text-uppercase pb_letter-spacing-2">Catering</h2>
+                  <h2 class="mb-4 text-uppercase pb_letter-spacing-2">Catering Events</h2>
                </div>
             </div>
             <div class="row">
